--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 	<header>
 		<nav>
-			<li><a href="C:\Users\palak srivastava\Desktop\itt\SIGN UP & LOGIN\Sliding-Sign-In-Sign-Up-Form-master\index.html">LOGIN</a></li>
-			<li><a href="C:\Users\palak srivastava\Desktop\itt\SIGN UP & LOGIN\Sliding-Sign-In-Sign-Up-Form-master\index.html">SIGNUP</a></li>
+			<li><a href="SIGN UP & LOGIN\Sliding-Sign-In-Sign-Up-Form-master\index.html">LOGIN</a></li>
+			<li><a href="SIGN UP & LOGIN\Sliding-Sign-In-Sign-Up-Form-master\index.html">SIGNUP</a></li>
 			<li><a href="#"><i class="fa fa-search"></i></a></li>
-			<li><a href="C:\Users\palak srivastava\Desktop\itt\Gallery\Respoinsive Slider\index.html">GALLERY</a></li>
-			<li><a href="C:\Users\palak srivastava\Desktop\itt\Donate Form\index.html">DONATE</a></li>
+			<li><a href="Gallery\Respoinsive Slider\index.html">GALLERY</a></li>
+			<li><a href="Donate Form\index.html">DONATE</a></li>
 			
 		</nav>
 	</header>
@@ -32,7 +32,7 @@
 				<div class="side-nav">
 					<li><a href="#"><span class="share-btn">SHARE</span></a></li>
 					<li><span class="copyright">&copy;</span></li>
-					<li><a href="C:\Users\palak srivastava\Desktop\itt\Maps\map.html"><span class="globe"><i class="fa fa-globe"></i></span></a></li>
+					<li><a href="Maps\map.html"><span class="globe"><i class="fa fa-globe"></i></span></a></li>
 				</div>
 			</div>
 		</aside>
@@ -47,8 +47,8 @@
 
 		<aside class="right-nav">
 			<nav class="right-nav-top acc">
-				<li><a style="margin-bottom: 2vw;" href="C:\Users\palak srivastava\Desktop\itt\About\About\index.html">ABOUT US</a></li>
-				<li><a href="C:\Users\palak srivastava\Desktop\itt\GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a></li>
+				<li><a style="margin-bottom: 2vw;" href="About\About\index.html">ABOUT US</a></li>
+				<li><a href="GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a></li>
 				<li><a href="#">COUNTRY</a></li>
 			</nav>
 
