--- a/medical care/index.html
+++ b/medical care/index.html
@@ -19,7 +19,7 @@
                 <a href="https://www.who.int/health-topics/coronavirus#tab=tab_1" class="mainlink">CORONA UPDATES</a>
                 <a href="https://www.google.com/intl/en_in/covid19/?utm_source=google&utm_medium=referral&utm_campaign=covid-19-">NEWS</a>
                 <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">PREVENTION</a>
-                <a href="C:\Users\palak srivastava\Desktop\IIT BOMBAY\GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a>
+                <a href="GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a>
             </div>
         </div>
 
@@ -142,10 +142,10 @@
         <div class="footer">
             <h2>MEDICAL CARE</h2>
             <div class="footerlinks">
-                <a href="C:\Users\palak srivastava\Desktop\IIT BOMBAY\Donate Form\index.html" class="mainlink">DONATE</a>
+                <a href="Donate Form\index.html" class="mainlink">DONATE</a>
                 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7460945/">AWARENESS</a>
-                <a href="C:\Users\palak srivastava\Desktop\IIT BOMBAY\About\About\index.html">ABOUT US</a>
-                <a href="C:\Users\palak srivastava\Desktop\IIT BOMBAY\GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a>
+                <a href="About\About\index.html">ABOUT US</a>
+                <a href="GET IN TOUCH & MAP\ContactUs.html">CONTACT US</a>
             </div>
         </div>
     </div>
