--- a/nav.html
+++ b/nav.html
@@ -10,14 +10,14 @@
 <body>
 	<div class="wrapper">
 					<ul>
-						<li><a href="C:\Users\palak srivastava\Desktop\itt\medical care\index.html">MEDICAL CARE</a></li>
+						<li><a href="medical care\index.html">MEDICAL CARE</a></li>
 						<li><a href="https://www.freelancer.in/jobs/">JOB OPPURNITIES</a></li>
 						<li><a href="https://www.edx.org/">FREE COURSES</a></li>
 						<li><a href="https://internshala.com/">INTERNSHIPS</a></li>
 						<li><a href="https://www.google.com/search?q=corona+news&rlz=1C1CHBF_enIN925IN925&oq=corona+news+&aqs=chrome..69i57j0i433i457j0l2j0i433l2j0i395l2.3027j1j4&sourceid=chrome&ie=UTF-8">NEWS UPDATES</a></li>
 						
 						<li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7460945/">AWARENESS</a></li>
-						<li><a href="C:\Users\palak srivastava\Desktop\itt\Maps\map.html">MAP US</a></li>
+						<li><a href="Maps\map.html">MAP US</a></li>
 
 
 					</ul>
